代码设计完成，完成所有相似度的计算和XZ2曲线